--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Alberto Pose <albertopose@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "async": "^0.9.0"
+    "async": "^0.9.0",
+    "temp": "^0.8.1"
   },
   "devDependencies": {
     "uuid": "^1.4.1"
